syntax = "proto3";

package infraboard.cmdb.task;
option go_package="github.com/tqtcloud/cloud-manage/apps/task";

import "github.com/infraboard/mcube/pb/page/page.proto";
import "apps/resource/pb/resource.proto";

service Service {
    rpc CreatTask (CreateTaskRequst) returns (Task);
    rpc QueryTask (QueryTaskRequest) returns (TaskSet);
    rpc DescribeTask(DescribeTaskRequest) returns(Task);
    rpc QueryTaskRecord(QueryTaskRecordRequest) returns(RecordSet);
}

enum Stage {
    PENDDING = 0;
    RUNNING = 1;
    SUCCESS = 2;
    FAILED = 3;
    WARNING = 4;
}

// 任务类型
enum Type {
    // 资源同步任务
    RESOURCE_SYNC = 0;
    // 资源释放任务
    RESOURCE_RELEASE = 1;
}

// Task 同个区域的同一种资源一次只能有1个task run
message Task {
    // 任务id
    // @gotags: json:"id"
    string id = 1;
    // credential
    // @gotags: json:"credential_description"
    string credential_description = 2;
    // 任务描述
    // @gotags: json:"data"
    CreateTaskRequst data = 3;
    // 任务状态
    // @gotags: json:"status"
    Status status = 4;
}

message Status {
    // 任务状态
    // @gotags: json:"stage"
    Stage stage = 1;
    // 失败时的异常信息
    // @gotags: json:"message"
    string message = 2;
    // 开始同步的时间
    // @gotags: json:"start_at"
    int64 start_at = 3;
    // 同步结束时间
    // @gotags: json:"end_at"
    int64 end_at = 4;
    // 成功的条数
    // @gotags: json:"total_succeed"
    int64 total_succeed = 5;
    // 失败的条数
    // @gotags: json:"total_failed"
    int64 total_failed = 6;
}

message RecordSet {
    // @gotags: json:"total"
    int64 total = 1;
    // @gotags: json:"items"
    repeated Record items = 2;
}

// 用于描述资源同步的详情信息
message Record {
    // 任务的Id
    // @gotags: json:"task_id"
    string task_id = 1;
    // 记录创建时间
    // @gotags: json:"create_at"
    int64 create_at = 2;
    // 资源实例Id
    // @gotags: json:"instance_id"
    string instance_id= 3;
    // 资源名称
    // @gotags: json:"name"
    string name = 4;
    // 是否同步成功
    // @gotags: json:"is_success"
    bool is_success = 5;
    // 同步失败原因
    // @gotags: json:"message"
    string message = 6;
}

message TaskSet {
    // @gotags: json:"total"
    int64 total = 1;
    // @gotags: json:"items"
    repeated Task items = 2;
}

message QueryTaskRequest {
    // 分页参数
    // @gotags: json:"page"
    infraboard.mcube.page.PageRequest page = 1;
    // @gotags: json:"resource_type"
    infraboard.cmdb.resource.TYPE resource_type = 3;
    // @gotags: json:"keywords"
    string keywords = 4;
}

message CreateTaskRequst {
    // 任务类型
    // @gotags: json:"type"
    Type type = 1;
    // 测试运行
    // @gotags: json:"dry_run"
    bool dry_run = 2;
    // 任务使用的云商凭证Id
    // @gotags: json:"credential_id" validate:"required,lte=100"
    string credential_id = 3;
    // 任务操作的资源类型
    // @gotags: json:"resource_type"
    infraboard.cmdb.resource.TYPE resource_type = 4;
    // 通知资源的Region
    // @gotags: json:"region"
    string region = 5;
    // 额外的一些参数
    // @gotags: json:"params"
    map<string,string> params = 6;
    // 任务执行的超时时间
    // @gotags: json:"timeout"
    int64 timeout = 7;
    // 任务所属域
    // @gotags: json:"domain"
    string domain = 8;
    // 任务所属空间
    // @gotags: json:"namespace"
    string namespace = 9;
}

message DescribeTaskRequest {
    // Task id
    // @gotags: json:"id" validate:"required"
    string id = 1; 
}

message QueryTaskRecordRequest {
    // Task id
    // @gotags: json:"task_id" validate:"required"
    string task_id = 1;
}